# feathergpu

./: CMakeLists.txt  LICENSE  README.md
include/feathergpu/bitmap/: wah_experimental.cuh
include/feathergpu/fl/: aafl.cuh  afl.cuh  afl_old_wrappers.cuh  afl_signed_experimental.cuh  containers.cuh  default.cuh  delta.cuh  delta_aafl.cuh  delta_pafl.cuh  delta_signed_experimental.cuh  helpers.cuh  pafl.cuh
include/feathergpu/util/: bit.cuh  cuda.cuh  launcher.cuh  macro.cuh  ptx.cuh  shfl.cuh
tests/: catch.hpp.old_2016-11-14  config.cuh  run_tests.cu  run_tests.out  test_aafl.cu  test_afl.cuh  test_afl_signed_experimental.cu  test_afl_signed_experimental.cuh  test_base.cuh  test_delta.cu  test_delta.cuh  test_delta_aafl.cu  test_delta_pafl.cuh  test_delta_signed_experimental.cu  test_delta_signed_experimental.cuh  test_macros.cu  test_pafl.cu  test_real_data.cu  test_real_data.cuh  test_wah_experimental.cu  test_wah_experimental.cuh
tests/test_fl/: test_aafl.cuh  test_afl.cu  test_afl.cuh  test_afl_signed_experimental.cuh  test_delta.cuh  test_delta_aafl.cuh  test_delta_pafl.cu  test_delta_pafl.cuh  test_delta_signed_experimental.cuh  test_pafl.cuh  test_real_data.cuh
tests/test_wah/: test_wah_experimental.cuh
tests/tools/: data.cu  data.cuh  macros.cuh  memory.cu  memory.cuh  performancelogger.cu  timeit.cu  timeit.cuh  tools.cuh
